test/spec_vectors/simd_lane/ok/module_0.wat
(module (func (export "i8x16_extract_lane_s-first") (param v128) (result i32) (i8x16.extract_lane_s 0 (local.get 0))) (func (export "i8x16_extract_lane_s-last") (param v128) (result i32) (i8x16.extract_lane_s 15 (local.get 0))) (func (export "i8x16_extract_lane_u-first") (param v128) (result i32) (i8x16.extract_lane_u 0 (local.get 0))) (func (export "i8x16_extract_lane_u-last") (param v128) (result i32) (i8x16.extract_lane_u 15 (local.get 0))) (func (export "i16x8_extract_lane_s-first") (param v128) (result i32) (i16x8.extract_lane_s 0 (local.get 0))) (func (export "i16x8_extract_lane_s-last") (param v128) (result i32) (i16x8.extract_lane_s 7 (local.get 0))) (func (export "i16x8_extract_lane_u-first") (param v128) (result i32) (i16x8.extract_lane_u 0 (local.get 0))) (func (export "i16x8_extract_lane_u-last") (param v128) (result i32) (i16x8.extract_lane_u 7 (local.get 0))) (func (export "i32x4_extract_lane-first") (param v128) (result i32) (i32x4.extract_lane 0 (local.get 0))) (func (export "i32x4_extract_lane-last") (param v128) (result i32) (i32x4.extract_lane 3 (local.get 0))) (func (export "f32x4_extract_lane-first") (param v128) (result f32) (f32x4.extract_lane 0 (local.get 0))) (func (export "f32x4_extract_lane-last") (param v128) (result f32) (f32x4.extract_lane 3 (local.get 0))) (func (export "i8x16_replace_lane-first") (param v128 i32) (result v128) (i8x16.replace_lane 0 (local.get 0) (local.get 1))) (func (export "i8x16_replace_lane-last") (param v128 i32) (result v128) (i8x16.replace_lane 15 (local.get 0) (local.get 1))) (func (export "i16x8_replace_lane-first") (param v128 i32) (result v128) (i16x8.replace_lane 0 (local.get 0) (local.get 1))) (func (export "i16x8_replace_lane-last") (param v128 i32) (result v128) (i16x8.replace_lane 7 (local.get 0) (local.get 1))) (func (export "i32x4_replace_lane-first") (param v128 i32) (result v128) (i32x4.replace_lane 0 (local.get 0) (local.get 1))) (func (export "i32x4_replace_lane-last") (param v128 i32) (result v128) (i32x4.replace_lane 3 (local.get 0) (local.get 1))) (func (export "f32x4_replace_lane-first") (param v128 f32) (result v128) (f32x4.replace_lane 0 (local.get 0) (local.get 1))) (func (export "f32x4_replace_lane-last") (param v128 f32) (result v128) (f32x4.replace_lane 3 (local.get 0) (local.get 1))) (func (export "i64x2_extract_lane-first") (param v128) (result i64) (i64x2.extract_lane 0 (local.get 0))) (func (export "i64x2_extract_lane-last") (param v128) (result i64) (i64x2.extract_lane 1 (local.get 0))) (func (export "f64x2_extract_lane-first") (param v128) (result f64) (f64x2.extract_lane 0 (local.get 0))) (func (export "f64x2_extract_lane-last") (param v128) (result f64) (f64x2.extract_lane 1 (local.get 0))) (func (export "i64x2_replace_lane-first") (param v128 i64) (result v128) (i64x2.replace_lane 0 (local.get 0) (local.get 1))) (func (export "i64x2_replace_lane-last") (param v128 i64) (result v128) (i64x2.replace_lane 1 (local.get 0) (local.get 1))) (func (export "f64x2_replace_lane-first") (param v128 f64) (result v128) (f64x2.replace_lane 0 (local.get 0) (local.get 1))) (func (export "f64x2_replace_lane-last") (param v128 f64) (result v128) (f64x2.replace_lane 1 (local.get 0) (local.get 1))) (func (export "v8x16_swizzle") (param v128 v128) (result v128) (i8x16.swizzle (local.get 0) (local.get 1))) (func (export "v8x16_shuffle-1") (param v128 v128) (result v128) (i8x16.shuffle 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 (local.get 0) (local.get 1))) (func (export "v8x16_shuffle-2") (param v128 v128) (result v128) (i8x16.shuffle 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 (local.get 0) (local.get 1))) (func (export "v8x16_shuffle-3") (param v128 v128) (result v128) (i8x16.shuffle 31 30 29 28 27 26 25 24 23 22 21 20 19 18 17 16 (local.get 0) (local.get 1))) (func (export "v8x16_shuffle-4") (param v128 v128) (result v128) (i8x16.shuffle 15 14 13 12 11 10 9 8 7 6 5 4 3 2 1 0 (local.get 0) (local.get 1))) (func (export "v8x16_shuffle-5") (param v128 v128) (result v128) (i8x16.shuffle 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 (local.get 0) (local.get 1))) (func (export "v8x16_shuffle-6") (param v128 v128) (result v128) (i8x16.shuffle 16 16 16 16 16 16 16 16 16 16 16 16 16 16 16 16 (local.get 0) (local.get 1))) (func (export "v8x16_shuffle-7") (param v128 v128) (result v128) (i8x16.shuffle 0 0 0 0 0 0 0 0 16 16 16 16 16 16 16 16 (local.get 0) (local.get 1))))